interface ArithmeticExpression {
    double calculate();
    void prettyPrint();
}
